Edit *-fix buttons and more alignmentand flex resizing

--- a/css/global.css
+++ b/css/global.css
@@ -12,9 +12,11 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex: 0;
+    flex: 0 0 auto;
     background-color: #1F2937;
     color: white;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .hlink {
@@ -26,15 +28,24 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 1;
+    flex: 1 0 auto;
     background-color: #1F2937;
     color: white;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .greeting {
     display: flex;
     flex-direction: column;
     flex: 1;
+}
+
+button {
+    width: fit-content;
+    padding: 5px 20px;
+    background-color: #3882F6;
+    color: white;
 }
 
 img {
@@ -45,7 +56,7 @@ img {
 .content {
     display: flex;
     flex-direction: column;
-    flex: 2;
+    flex: 2 0 auto;
 }
 
 .article {
@@ -53,7 +64,9 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex: 2;
+    flex: 2 0 auto;
+    padding-left: 15%;
+    padding-right: 15%;
 }
 
 .info {
@@ -71,8 +84,10 @@ img {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex: 1.5;
+    flex: 1 0 auto;
     background-color: #E5E7EB;
+    padding-left: 20%;
+    padding-right: 20%;
 }
 
 h6 {
@@ -83,25 +98,38 @@ h6 {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex: 1;
-    background-color: #3882F6;
-    color: white;
+    flex: .5 0 auto;
+    padding: 5% 10% 5% 10%;
 }
 
 .banner {
     display: flex;
+    background-color: #3882F6;
+    color: white;
+    border: none;
+    padding: 25px 50px 25px 50px;
+    justify-content: space-between;
+    gap: 50px;
 }
 
 .banner-text {
-    display: flex;
-    flex-direction: column;
+    text-align: left;
 }
 
+.banner-heading {
+    font-size:larger;
+    font-weight: bold;
+}
+
+.banner-button {
+    align-self: center;
+    flex: 1 0 auto;
+}
 .footer {
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    flex: 0;
+    flex: 0 0 auto;
     background-color: #1F2937;
     color: white;
 }
